--- a/AboutPage/AboutPage.css
+++ b/AboutPage/AboutPage.css
@@ -1,3 +1,19 @@
+.leftside, .rightside{
 
     
+}
+
+body {
+    background-color: lightblue;
+}
+
+h1 {
+    color: black;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+p {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+}
 
