--- a/AboutPage/AboutPage.css
+++ b/AboutPage/AboutPage.css
@@ -1,19 +1,55 @@
-.leftside, .rightside{
-
-    
+body {
+    display: flex;
+    height: 100vh;
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #8d6ea0;
 }
 
-body {
-    background-color: lightblue;
+.left-side {
+    width: 50%;
+    background: linear-gradient(to right, #e0bff5, babyblue);
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.right-side {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    box-sizing: border-box;
+    background-color: #e0bff5;
 }
 
 h1 {
-    color: black;
-    text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #aeb58b;
 }
 
 p {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    font-size: 18px;
+    color: #ecf5bf;
 }
 
+iframe {
+    width: 80%;
+    height: 300px;
+    border-radius: 10px;
+    border: none;
+    margin-top: 20px;
+}
+
+.images {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+    width: 80%;
+}
+
+.images img {
+    width: 45%;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+}
